Modify hyperref options: color links!

--- a/algebra.tex
+++ b/algebra.tex
@@ -12,7 +12,7 @@
 \usepackage[margin=0.7in,bmargin=1.2in]{geometry}
 \usepackage{multicol}
 
-\usepackage{hyperref}
+\usepackage[colorlinks=true,pagebackref=true]{hyperref}
 
 \usepackage{mathabx}
 
