Incorporate corrections by Vladislav Komarov

--- a/algebra.tex
+++ b/algebra.tex
@@ -135,6 +135,9 @@
 % И. М. Гельфанд, Лекции по линейной алгебре.
 % Халмош, Конечномерные векторные пространства.
 
+Автор выражает свою благодарность всем слушателям данного курса, и особенно
+Владиславу Комарову, который указал на большое количество
+опечаток и неточностей.
 
 \vfill\eject
 
