--- a/vector-spaces.tex
+++ b/vector-spaces.tex
@@ -67,7 +67,7 @@ $\cdot\colon V\times k\to V$ называется \dfn{векторным
 \end{remark}
 \begin{remark}
 Мы постараемся всегда при умножении вектора на скаляр записывать
-вектор слева, а вектор справа, то есть, писать $v\cdot a$ для $v\in V$
+вектор слева, а скаляр справа, то есть, писать $v\cdot a$ для $v\in V$
 и $a\in k$. Вместе с тем, можно было бы везде писать $a\cdot v$
 вместо $v\cdot a$. Читателю предлагается переписать
 определение~\ref{def:vector_space} в таких терминах и убедиться, что
@@ -319,7 +319,7 @@ $u_1 = \dots = u_n = 0$.
 \end{enumerate}
 \end{proposition}
 \begin{proof}
-Предположим сначала, что $V = U_1\oplus\dots\oplus V_n$.
+Предположим сначала, что $V = U_1\oplus\dots\oplus U_n$.
 Тогда по определению $V = U_1 + \dots + U_n$.
 Предположим, что $0 = u_1 + \dots + u_n$, где $u_1\in U_1,\dots,u_n\in U_n$.
 Заметим, что также $0 = 0 + \dots + 0$, где $0\in U_1,\dots,0\in U_n$.
@@ -624,7 +624,7 @@ $u_1,\dots,u_m$, чего не может быть.
 Продолжим процесс: на $i$-ом шаге у нас есть набор $v_1,\dots,v_{i-1}$ такой,
 что $\la v_1,\dots,v_{i-1}\ra\subseteq U$. Если на самом деле имеет место равенство,
 то $U$ конечномерно, что и требовалось. Если нет~--- выберем
-$v_i\in U$ так, что $v_i\notin\la v_1,\dots,v_{i-1}$. Заметим, что
+$v_i\in U$ так, что $v_i\notin\la v_1,\dots,v_{i-1}\ra$. Заметим, что
 на каждом шаге мы получаем линейно независимый набор. Действительно,
 если векторы $v_1,\dots,v_i$ линейно зависимы, то по лемме~\ref{lemma:linear-dependence-lemma}
 какой-то из них выражается через предыдущие, что невозможно в силу выбора
@@ -887,7 +887,7 @@ $$
 $U_1\cap U_2$ (и, таким образом, $m = \dim(U_1\cap U_2$).
 Система $\{u_1,\dots,u_m\}$ линейно независима как набор
 векторов в $U_1$, и поэтому ее можно дополнить до базиса:
-пусть $\{u_1,\dots,u_m,v_1\,dots,v_l\}$~--- базис $U_1$.
+пусть $\{u_1,\dots,u_m,v_1\,\dots,v_l\}$~--- базис $U_1$.
 Аналогично, система $\{u_1,\dots,u_m\}$ линейно независима
 как набор векторов в $U_2$, и поэтому ее можно дополнить
 до базиса пространства $U_2$: пусть
@@ -947,7 +947,7 @@ $$
 базисов является порождающей системой векторов в $V$
 (поскольку $V$ является суммой $U_i$), а их количество
 равно размерности $V$. По предложению~\ref{prop:right-dim-implies-basis}
-он является базисом в $V$. Обозначим этот базис через $\mc B$.
+это объединение является базисом в $V$. Обозначим его через $\mc B$.
 По определению прямой суммы нам нужно доказать, что если
 $0 = u_1+\dots+u_m$ для некоторых $u_i\in U_i$, то $u_1=\dots=u_m=0$.
 Разложим каждый вектор $u_i$ по выбранному базису пространства
