Corrected errata in 9.4–9.6

--- a/euclidean-spaces.tex
+++ b/euclidean-spaces.tex
@@ -359,7 +359,7 @@ $$
 
 Таким образом, мы показали, что матрица Грама симметрической
 билинейной формы является симметрической, а матрица Грама эрмитовой
-билинейной формы является эрмитовой.
+полуторалинейной формы является эрмитовой.
 
 Обратно, по любой симметрической матрице над $\mb R$ можно построить
 симметрическую билинейную форму, а по любой эрмитовой матрице над $\mb
@@ -479,7 +479,7 @@ $e_i\perp e_j$ при $i\neq j$. Этот базис называется
 \begin{lemma}\label{lem:orthogonality_implies_independency}
 Пусть $(V,B)$~--- эвклидово или унитарное пространство. Если ненулевые
 векторы $e_1,\dots,e_n\in V$ попарно ортогональны,
-то они линейно независимо. Если, кроме того, $\dim V=n$, то векторы
+то они линейно независимы. Если, кроме того, $\dim V=n$, то векторы
 $e_1,\dots,e_n$ образуют ортогональный базис.
 \end{lemma}
 \begin{proof}
@@ -678,7 +678,7 @@ $\ol{C}=C$ для $C\in M(n,\mb R)$.
 
 \begin{theorem}
 Пусть $(V,B)$~--- эвклидово или унитарное пространство.
-Пусть $\mc E$, $\mc F$~--- ортогональные базисы $V$, и
+Пусть $\mc E$, $\mc F$~--- ортонормированные базисы $V$, и
 $C=(\mc E\rsa\mc F)$~--- матрица перехода между ними. Тогда матрица
 $C$ ортогональна в случае эвклидова пространства и унитарна в случае
 унитарного пространства.
@@ -687,7 +687,7 @@ $C$ ортогональна в случае эвклидова простран
 По теореме~\ref{thm:Gram_matrix_change_of_coordinates} выполнено
 $G_{\mc F} = \ol{C}^T\cdot G_{\mc E}\cdot C$, где
 $G_{\mc E}$, $G_{\mc F}$~--- матрицы Грама формы $B$ в базисах $\mc E$,
-$\mc F$ соответственно. Но базисы $\mc E$, $\mc F$ ортогональны,
+$\mc F$ соответственно. Но базисы $\mc E$, $\mc F$ ортонормированы,
 поэтому $G_{\mc E} = G_{\mc F} = E$. Значит, $E = \ol{C}^T\cdot C$, и
 матрица $C$ ортогональна в эвклидовом случае и унитарна в унитарном
 случае.
