Corrected errata in 9.10–9.12 subsections

--- a/euclidean-spaces.tex
+++ b/euclidean-spaces.tex
@@ -1148,7 +1148,7 @@ $$
 
 \begin{lemma}\label{lem:complex-unitary-1}
 Пусть $V$~--- унитарное пространство (внимание!),
-$T\colon V\to V$~--- линейный оператора.
+$T\colon V\to V$~--- линейный оператор.
 Предположим, что $B(T(v),v) = 0$ для всех $v\in V$.
 Тогда $T = 0$.
 \end{lemma}
@@ -1198,7 +1198,7 @@ $$
 
 \begin{remark}
 Замечание~\ref{rem:complex-unitary-counterexample} показывает,
-что на эвклидовом пространстве оператор $T$ может удовлетворять
+что на эвклидовом пространстве ненулевой оператор $T$ может удовлетворять
 тождеству $B(T(v),v)=0$ для всех $v\in V$. Однако,
 этого не может случиться для самосопряженного оператора.
 \end{remark}
@@ -1257,7 +1257,7 @@ $||T(v)|| = ||T^*(v)||$ для всех $v\in V$.
 \begin{proof}
 Заметим, что оператор $T^*\circ T - T\circ T^*$ самосопряжен.
 По лемме~\ref{lem:selfadjoint-zero-characterisation}
-равенство $T^*\circ T - T\circ T^*$ равносильно тому,
+равенство $T^*\circ T - T\circ T^*$ нулю равносильно тому,
 что $B((T^*\circ T - T\circ T^*)(v),v) = 0$ для всех $v\in V$,
 что равносильно равенству
 $B(T^*(T(v)),v) = B(T(T^*(v)),v)$ для всех $v\in V$.
@@ -1292,7 +1292,7 @@ $T$, соответствующие различным собственным ч
 По предложению~\ref{prop:normal-operator-adjoint-eigenvalues}
 теперь $T^*(u) = u\ol\lambda$.
 Поэтому $(\lambda-\mu)B(u,v) = B(u\ol\lambda,v) - B(u,v\mu)
-= B(T(u),v) - B(u,T^*(v)) = 0$.
+= B(T^*(u),v) - B(u,T(v)) = 0$.
 Поскольку $\lambda\neq\mu$, из этого равенства следует, что
 $B(u,v)=0$, что и требовалось.
 \end{proof}
@@ -1318,7 +1318,7 @@ $V$ диагональна.
 \begin{proof}
 Очевидно, что $(2)\Leftrightarrow(3)$ (см. также
 доказательство теоремы~\ref{thm:diagonalizable-equivalent}).
-Покажем, что из (3) следует (1). Пусть матрица $t$ в некотором
+Покажем, что из (3) следует (1). Пусть матрица $T$ в некотором
 ортонормированном базисе $\mc B$ диагональна.
 По предложению~\ref{prop:adjoint_matrix}
 матрица $T^*$ тогда получается из матрицы $T$ транспонированием
@@ -1505,7 +1505,7 @@ $V$ диагональна.
 диагональна. Но диагональная матрица совпадает со своей
 транспонированной, поэтому $T=T^*$, откуда следует $(1)$.
 
-Теперь мы докажем. что из $(1)$ следует $(2)$ индукцией по размености
+Теперь мы докажем, что из $(1)$ следует $(2)$ индукцией по размерности
 пространства $V$.
 Если $\dim(V)=1$, утверждение очевидно.
 Пусть теперь $\dim(V) > 1$, и оператора $T$ самосопряжен.
@@ -1518,7 +1518,7 @@ $V$ диагональна.
 и оператор $T|_{U^\perp}$ самосопряжен.
 По предположению индукции у $U^\perp$ есть ортонормальный базис,
 состоящий из собственных векторов оператора $T|_{U^\perp}$.
-Присоединив к нему $u$, получаем ортонормальный базис $U^\perp$,
+Присоединив к нему $u$, получаем ортонормальный базис $V$,
 состоящий из собственных векторов оператора $T$.
 \end{proof}
 
@@ -1673,6 +1673,7 @@ $(2)\Rightarrow (1)$: несложно проверить, что матрица
 
 \literature{[F], гл. XIII, \S~5; [K2], гл. 3, \S~3, пп. 3, 6; [KM],
   ч. 2, \S~7, пп. 1--2, 4; \S~8, пп. 2--6.}
+\nopagebreak
 
 Сейчас мы применим знания, полученные при изучении нормальных
 операторов, к некоторым частным случаям.
