Corrected errata in 10.1–10.4 subsections

--- a/group-theory.tex
+++ b/group-theory.tex
@@ -413,8 +413,8 @@ $G/H$. Множество левых смежных классов $G$ по $H$ 
 по модулю подпространства (см. определение~\ref{def:quotient_space});
 однако, отсутствие коммутативности приводит к тому, что необходимо
 рассматривать два варианта обобщения: условие $v_1-v_2\in U$ из
-определения~\ref{def:quotient_space} мы заменяем на $v_1v_2^{-1}$ в
-одном варианте и на $v_2^{-1}$ в другом. Если группа $G$ абелева, то
+определения~\ref{def:quotient_space} мы заменяем на $v_1v_2^{-1}\in U$ в
+одном варианте и на $v_2^{-1}v_1\in U$ в другом. Если группа $G$ абелева, то
 $gH = Hg$ для всех $g\in G$, и отношения $\sim_H$, ${}_H{\sim}$
 совпадают.
 \end{remark}
@@ -481,6 +481,7 @@ $ghg^{-1} = {}^gh$.
 абелевой группы нормальны.
 \end{remark}
 
+\hspace{0em}
 \begin{examples}\label{examples:normal_subgroups}
 \hspace{1em}
 \begin{enumerate}
@@ -573,7 +574,7 @@ $\ph(x)^{-1} = \ph(x^{-1})$.
 \begin{definition}
 Пусть $\ph\colon G\to H$~--- гомоморфизм групп. \dfn{Ядром}
 гомоморфизма $\ph$ называется множество $\Ker(\ph)=\{x\in G\mid
-f\ph(x) = e_H\}$ (полный прообраз единицы). \dfn{Образом} гомоморфизма
+\ph(x) = e_H\}$ (полный прообраз единицы). \dfn{Образом} гомоморфизма
 $\ph$ называется его теоретико-множественный образ: $\Img(\ph) =
 \{y\in H\mid y = \ph(x)\text{ для некоторого }x\in G\}$.
 \end{definition}
@@ -621,14 +622,14 @@ $\ph$ сюръективно тогда и только тогда, когда $
 
 \begin{lemma}\label{lem:injective_homo}
 Пусть $\ph\colon G\to H$~--- гомоморфизм групп. Он инъективен тогда и
-только тогда, когда $\Ker(\ph) = e$.
+только тогда, когда $\Ker(\ph) = \{e\}$.
 \end{lemma}
 \begin{proof}
 Если $\ph$ инъективен, то есть только один элемент $g\in G$ такой, что
 $\ph(g) =e$, и мы знаем, что $\ph(e)=e$.
-Обратно, если $\Ker(\ph)=e$ и $g,g'\in G$ таковы, что
+Обратно, если $\Ker(\ph)=\{e\}$ и $g,g'\in G$ таковы, что
 $\ph(g)=\ph(g')$, то $\ph(g^{-1}g') = \ph(g)^{-1}\ph(g') = e$, поэтому
-$g^{-1}g'\in\Ker(\ph)=e$, откуда $g = g'$.
+$g^{-1}g'\in\Ker(\ph)=\{e\}$, откуда $g = g'$.
 \end{proof}
 
 \begin{definition}
