Corrected errata in 11.5–11.8 subsections

--- a/multilinear.tex
+++ b/multilinear.tex
@@ -721,7 +721,7 @@ $$
 \begin{proof}
 Заметим сначала, что размерности обеих частей равны
 $\dim(U)\cdot\dim(V)\cdot\dim(W)$. Рассмотрим произвольный элемент
-$\ph\colon\Hom(U,\Hom(V,W))$. Он сопоставляет (линейным образом)
+$\ph\in\Hom(U,\Hom(V,W))$. Он сопоставляет (линейным образом)
 каждому элементу $u\in U$ некоторое линейное отображение
 $\ph_u\colon V\to W$, $v\mapsto\ph_u(v)$. Построим теперь по этому
 элементу $\ph$ линейное отображение из $U\otimes V$ в $W$ следующим
@@ -767,7 +767,7 @@ $$\ph\otimes\psi\colon U\otimes W\to V\otimes Z.$$
 Покажем, что это определение обладает естественными свойствами.
 
 \begin{theorem}\label{thm:tensor_product_maps}
-Тензорное произведение линейных отображение обладает следующими
+Тензорное произведение линейных отображений обладает следующими
 свойствами:
 \begin{enumerate}
 \item $(\ph'\ph)\otimes(\psi'\psi) =
@@ -899,7 +899,7 @@ $$
 Если матрица оператора $\ph$ в базисе $(e_i)$ равна $a$, а матрица
 оператора $\psi$ в базисе $(f_j)$ равна $b$, то матрица оператора
 $\ph\otimes\psi$ в тензорном базисе $(e_i\otimes f_j)$ равна
-кронекеровому произведениею $a\times b$.
+кронекеровому произведениею $a\otimes b$.
 \end{theorem}
 \begin{proof}
 Пусть $u\in U$, $v\in V$~--- произвольные векторы. По определению
@@ -1005,10 +1005,11 @@ $1\leq i_1,\dots,i_p,j_1,\dots,j_q\leq n$.
 $$
 x = \sum_{\substack{i_1,\dots,i_p \\ j_1,\dots,j_q}}
 x^{i_1\dots i_p}_{j_1\dots j_q} e_{i_1}\otimes\dots\otimes
-e_{i_p}\otimes e^{j_1}\otimes e^{j_q},
+e_{i_p}\otimes e^{j_1}\otimes\dots\otimes e^{j_q},
 $$
 где $x^{i_1\dots i_p}_{j_1\dots j_q}\in k$~--- координаты тензора в
 этом базисе.
+
 Традиционно тензор задавался явным перечислением своих координат. При
 этом, поскольку этот набор зависит от выбора базиса, приходится
 указывать, как же преобразуются координаты тензора при другом выборе
