--- a/multilinear.tex
+++ b/multilinear.tex
@@ -267,7 +267,7 @@ n$, образуют базис пространства $V\otimes W$.
 \begin{proof}
 Рассмотрим пространство $X$ размерности $mn$, базис которого состоит
 из элементов вида $e_i\otimes f_j$. Сейчас мы определим билинейное
-отображение $V\otimes W\to X$ и проверим, что $X$ вместе с этим
+отображение $V\times W\to X$ и проверим, что $X$ вместе с этим
 отображением удовлетворяет универсальному свойству тензорного
 произведения.
 
